# ARMovieProj

./: README.md
aRMovie/: CMakeLists.txt  build.gradle
aRMovie/src/main/java/org/artoolkit/ar/samples/ARMovie/: ARMovieActivity.java
